# bazhyn_caylex_agent_building_project

./: .env.example  .gitignore  README.md  agent.py  app.py  pyproject.toml
app/: app.py
app/agents/: agent.py
app/helpers/: app_helpers.py
app/mcp_servers/: server_comms.py  server_crm.py  server_oms.py
app/tests/: test_agent.py  test_comms.py  test_crm.py  test_failures.py  test_oms.py
